--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -3,13 +3,13 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background-color: #f4f4f4;
+	background-color: #f0f5ff;
 }
 
 .row, .flex-row {
 	width: 100%;
 	@include outer-container;
-	max-width: auto;
+	max-width: none;
 }
 
 .flex-row {
@@ -201,7 +201,6 @@
 
 		.container-header {
 			.header-title {
-				font-weight: 300;
 				font-size: 1.5em;
 
 				span {
@@ -245,7 +244,6 @@ dl {
 	dt {
 		width: 200px;
 		color: $grey;
-		font-weight: 300;
 		font-size: .9em;
 	}
 
