--- a/app/assets/stylesheets/core/_buttons.scss
+++ b/app/assets/stylesheets/core/_buttons.scss
@@ -60,12 +60,69 @@
   align-items: center;
   justify-content: center;
   min-width: auto;
-  width: calc(1em + 20px);
-  height: calc(1em + 20px);
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 
   img {
     width: 16px;
     height: 16px;
+  }
+}
+
+.options {
+  position: relative;
+
+  .options-btn {
+    img {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  ul {
+    z-index: 999;
+    display: none;
+    list-style: none;
+    position: absolute;
+    top: calc(100% + 10px);
+    right: 0;
+    background-color: $primary-color;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+    &:before, &:after {
+      content: "";
+      position: absolute;
+      border-left: solid 6px transparent;
+      border-right: solid 6px transparent;
+      bottom: 100%;
+    }
+
+    &:before {
+      right: 6px;
+      bottom: 100%;
+      border-bottom: solid 6px #fff;
+      z-index: 3;
+    }
+
+    &:after {
+      right: 5px;
+      border-bottom: solid 6px #d6d6d6;
+      z-index: 2;
+    }
+
+    li a {
+      display: block;
+      padding: 10px 15px;
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      white-space: nowrap;
+      font-size: .75em;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: #f4f4f4;
+      }
+    }
   }
 }
