--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -1,10 +1,21 @@
+#registrations, #users, #sessions {
+	&.new, &.create, &.edit, &.update {
+		.main {
+			height: auto;
+			min-height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding: 25px;
+		}
+	}
+}
+
 .login-panel {
 	max-width: 1280px;
-	max-height: 720px;
-	height: 100%;
+	height: 760px;
+	width: 100%;
 	position: relative;
-	top: 50%;
-	@include prefix(transform, translateY(-50%));
 	
 	&:before {
 		content: "";
@@ -120,8 +131,6 @@
 	padding: 20px 0 50px 0;
 	max-width: 1600px;
 	position: relative;
-	top: 50%;
-	@include prefix(transform, translateY(-50%));
 
 	.logo-dti {
 		display: block;
