--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -1,6 +1,6 @@
 .box {
 	margin: 0 auto;
-	background-color: #ffffff;
+	background-color: $alt-color;
 	display: flex;
 	align-items: center;
 	justify-content: center;
