--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,8 +1,8 @@
 <aside class="menu main-sidebar">
 	<header class="sidebar-header">
-		<%= link_to image_tag("logo-dti-branco.png"), home_path, class: 'logo-dti' %>
+		<%= link_to "DTI", home_path, class: 'logo-dti' %>
 
-		<h3 class="header-title">SISTEMA DE <br>GERENCIAMENTO DE <br>CHAMADOS TÉCNICOS</h3>
+		<h3 class="logo-subtitle">SISTEMA DE <br>GERENCIAMENTO DE <br>CHAMADOS TÉCNICOS</h3>
 	</header>
 	
 	<nav class="sidebar-nav">
