--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background-color: #f0f5ff;
+	background-color: #f4f4f4;
 }
 
 .row, .flex-row {
@@ -27,6 +27,11 @@
 		justify-content: center;
 		align-items: center;
 	}
+}
+
+.flex-inline {
+	display: flex;
+	flex-direction: row;
 }
 
 .wrapper {
@@ -77,7 +82,7 @@
 }
 
 .link {
-	color: $info;
+	color: $blue;
 	display: inline-block;
 	text-decoration: none;
 	background-color: transparent;
@@ -93,23 +98,27 @@
 	display: inline-block;
 	position: relative;
 
-	&:before {
+	&:after {
 		content: "";
 		width: 16px;
 		height: 16px;
 		@include background("icons/search.svg", "icon");
 		position: absolute;
-		left: 15px;
+		right: 15px;
 		top: 10px;
 	}
 
 	input[type="text"], input[type="number"] {
-		padding: 10px 10px 10px 46px;
-		border: solid 1px #d6d6d6;
-		border-radius: 50px;
+		padding: 10px 46px 10px 15px;
+		border: solid 2px transparent;
+		border-radius: 5px;
 		font-size: .75em;
-		max-width: 100%;
-		width: 400px;
+		width: 100%;
+		@include prefix(transition, .5s cubic-bezier(.075,.82,.165,1));
+
+		&:hover {
+			border-color: rgba($dark-blue, .75);
+		}
 	}
 
 	input[type="submit"] {
@@ -185,6 +194,18 @@
   }
 }
 
+.logo-dti {
+	font-size: 3em;
+	font-weight: 300;
+	color: $primary-color;
+	font-family: "Toothless";
+}
+
+.logo-subtitle {
+	font-size: 1em;
+	color: $primary-color;
+}
+
 .main-panel {
 	&, .main-sidebar, .main-container {
 		height: 100%;
@@ -211,43 +232,41 @@
 
 			.header-subtitle {
 				font-size: .75em;
-				color: $grey;
 				margin-bottom: -5px;
 			}
 		}
 	}
 }
 
-section.bordered {
-	@include prefix(box-shadow, rgba(149, 157, 165, 0.2) 0px 8px 24px);
-  border-radius: 5px;
-  padding: 25px;
-
-  &:nth-of-type(n+2) {
-  	margin-top: 15px;
-  }
+section {
+  padding: 25px 0;
 }
 
 dl {
 	width: 100%;
 	display: flex;
 	gap: 15px;
+	padding-top: 15px;
+  padding-bottom: 15px;
 
 	&.as-block {
 		flex-direction: column;
 	}
 
 	&:nth-of-type(n+2) {
-		margin-top: 15px;
+		border-top: solid 1px rgba(0, 0, 0, 0.1);
+	}
+
+	dt, dd {
+		font-size: .9em;
 	}
 
 	dt {
 		width: 200px;
-		color: $grey;
-		font-size: .9em;
 	}
 
 	dd {
 		width: calc(100% - 200px);
+		font-weight: bold;
 	}
 }
