--- a/app/assets/stylesheets/base/_fonts.scss
+++ b/app/assets/stylesheets/base/_fonts.scss
@@ -1,1 +1,6 @@
-
+@font-face {
+  font-family: 'Toothless';
+  src: font-url('Toothless.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
