--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,12 +1,18 @@
-$font: 'Montserrat', sans-serif;;
+$font: 'Montserrat', sans-serif;
 
 $primary-color: #fff;
 $secondary-color: #000;
+$alt-color: #edf0f0;
 
 $purple: #6b45c5;
-$grey: #9ea7ad;
+$grey: #e5e8e8;
 
 $info: #2dccff;
 $warning: #ffb302;
 $alert: #ff3838;
 $success: #00ae69;
+
+$orange: #fe8003;
+$green: #aed739;
+$blue: #06abdb;
+$dark-blue: #0b0e42;
