--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -3,6 +3,7 @@
 		.main-panel .main-container {
 			.container-header {
 				.header-title {
+					font-weight: 300;
 					text-transform: uppercase;
 					span {
 						font-style: initial;
@@ -60,7 +61,7 @@
 			  }
 
 			  &.em-manutencao h4 span {
-			  	color: $grey;
+			  	color: #aaa;
 			  }
 
 			  &.para-retirada h4 span {
@@ -68,7 +69,7 @@
 			  }
 
 			  &.saiu-para-entrega h4 span {
-			  	color: $warning;
+			  	color: $orange;
 			  }
 
 			  &.aguardando-pecas h4 span {
@@ -108,7 +109,7 @@
 					  }
 
 					  &.em-manutencao {
-					  	border-left: solid 5px $grey;
+					  	border-left: solid 5px #aaa;
 					  }
 
 					  &.para-retirada {
@@ -143,8 +144,6 @@
 					  .order-card-body {
 					  	text-align: left;
 					  	padding: 15px;
-					  	border-left: solid 1px #f4f4f4;
-					  	border-right: solid 1px #f4f4f4;
 					  	width: 100%;
 					  	flex-direction: column;
 					  }
@@ -161,20 +160,21 @@
 				}
 
 				.order-card {
-				  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+				  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 				  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 				  border-radius: 5px;
 				  min-width: 200px;
 				  display: flex;
 				  flex-direction: column;
 				  position: relative;
+				  background-color: white;
 
 				  &.em-aberto {
 				  	border-top: solid 10px $info;
 				  }
 
 				  &.em-manutencao {
-				  	border-top: solid 10px $grey;
+				  	border-top: solid 10px #aaa;
 				  }
 
 				  &.para-retirada {
@@ -216,7 +216,8 @@
 
 						.left-content .order-spot, .right-content .order-creation-date {
 							font-size: .75em;
-							color: $grey;
+							font-weight: 600;
+							color: rgba(0, 0, 0, 0.5);
 						}
 					}
 
@@ -260,7 +261,7 @@
 						padding: 15px;
 
 						span {
-							color: $grey;
+							color: rgba(0, 0, 0, 0.5);
 							font-size: .75em;
 							font-weight: 600;
 						}
@@ -300,7 +301,6 @@
 			}
 
 			.order-tab button {
-				background-color: $primary-color;
 				border-bottom: solid 5px #d6d6d6;
 				padding: 10px 20px;
 				cursor: pointer;
@@ -309,7 +309,7 @@
 				z-index: 2;
 
 				&:hover, &.current {
-					border-color: $info;
+					border-color: $dark-blue;
 				}
 			}
 		}
@@ -332,7 +332,6 @@
 
 			p {
 				font-size: .9em;
-				color: $grey;
 			}
 		}
 	}
@@ -400,14 +399,14 @@
 							}
 
 							&.checked, &:hover {
-								color: #2dccff !important;
+								color: $dark-blue !important;
 
 								&:before {
-									background-color: #2dccff;
+									background-color: $dark-blue;
 								}
 
 								&:after {
-									background-color: rgba(#2dccff, 0.25);
+									background-color: rgba($dark-blue, 0.25);
 								}
 							}
 
@@ -438,15 +437,15 @@
 					width: 150px !important;
 				}
 
-				.input:not(.submit):not(.boolean), textarea {
-					width: 100%;
-				}
-
 				.actions {
 					display: flex;
 					gap: 25px;
 				}
 			}
 		}
+	}
+
+	.search_list {
+		display: none;
 	}
 }
