--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,41 +11,64 @@
 
 			<div class="right-content">
 				<div class="action-buttons">
-					<%= link_to image_tag("icons/grid.png"), "#", class: "as-grid btn-icon" %>
-					<%= link_to image_tag("icons/list.svg"), "#", class: "as-list btn-icon" %>
+					<%= link_to image_tag("icons/grid.png"), "#", alt: "Modo de exibição: quadros", title: "Modo de exibição: quadros", class: "as-grid btn-icon" %>
+					<%= link_to image_tag("icons/list.svg"), "#", alt: "Modo de exibição: lista", title: "Modo de exibição: lista",class: "as-list btn-icon" %>
 					<div class="options">
-						<%= link_to image_tag("icons/filter.svg"), "#", alt: "Filtrar", title: "Filtrar", class: "btn-icon options-btn" %>
+						<%= link_to "#", alt: "Filtrar", title: "Filtrar", class: "btn options-btn" do %><i class="icon filter"></i>Filtrar<% end %>
 						<ul>
 							<li><%= link_to "Chamados sem patrimônio", sp: true %></li>
 						</ul>
 					</div>
 				</div>
-				<%= link_to "Abrir chamado", new_order_path, class: "btn-success" %>
+				<%= link_to new_order_path, class: "btn-success" do %><i class="icon add"></i>Abrir chamado<% end %>
 			</div>
 		</header>
 
-		<%= form_tag(orders_path, method: :get, class: "filters") do %>
-			<div class="search" id="autocomplete-patrimony">
-				<%= autocomplete_field_tag :s_patrimony, params[:s_patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony",
-'data-noMatchesLabel' => "Nenhum equipamento encontrado" %>
+		<%= form_tag(orders_path, method: :get, class: "filters form") do %>
+			<div class="flex-row gap-15">
+				<div class="search flex-col flex-col-3" id="autocomplete-patrimony">
+					<%= autocomplete_field_tag :s_patrimony, params[:s_patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony",
+	'data-noMatchesLabel' => "Nenhum equipamento encontrado" %>
+				</div>
+
+				<div class="search flex-col flex-col-3" id="autocomplete-spot">
+					<%= text_field_tag :s_spot, params[:s_spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
+					<% list_spots.each do |spot| %>
+				    <%= content_tag :div, spot, class: "search_list list_spots" %>
+					<% end %>
+				</div>
+
+				<div class="search flex-col flex-col-3" id="autocomplete-category">
+					<%= text_field_tag :s_category, params[:s_category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
+					<% list_categories.each do |category| %>
+				    <%= content_tag :div, category, class: "search_list list_categories" %>
+					<% end %>
+				</div>
+
+				<div class="search flex-col flex-col-3" id="autocomplete-brand">
+					<%= text_field_tag :s_brand, params[:s_brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
+					<% list_brands.each do |brand| %>
+				    <%= content_tag :div, brand, class: "search_list list_brands" %>
+					<% end %>
+				</div>
 			</div>
 
-			<div class="search">
-				<%= text_field_tag :s_spot, params[:s_spot], placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
-			</div>
+			<div class="flex-row gap-15 m-t-15">
+				<div class="flex-col flex-col-3">
+					<div class="custom-select">
+						<%= select_tag :s_status, options_for_select(list_status, params[:s_status]), prompt: "Todos"  %>
+					</div>
+				</div>
 
-			<div class="search">
-				<%= text_field_tag :s_category, params[:s_category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
-			</div>
-
-			<div class="search">
-				<%= text_field_tag :s_brand, params[:s_brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
+				<div class="flex-col flex-col-3"></div>
+				<div class="flex-col flex-col-3"></div>
+				<div class="flex-col flex-col-3"></div>
 			</div>
 
 			<%= submit_tag ("Buscar") %>
 		<% end %>
 
-		<%= content_tag :i, "Resultados da busca: #{@orders.length} chamado(s) encontrados.", class: "flash notice m-b-0 m-t-25" if params %>
+		<%= content_tag :p, "<strong class='m-r-5'>Resultados da busca:</strong> #{@orders.length} chamado(s) encontrados.".html_safe, class: "flash inline notice m-b-0 m-t-25" if params[:commit] || params[:sp] %>
 
 		<% unless @orders.nil? || @orders.blank? %>
 			<section class="container-body">
