--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,22 +3,21 @@
 
 	<div class="container main-container">
 		<header class="container-header">
-			<h1 class="header-title text-center">Abertura de <span>chamado</span></h1>
+			<h1 class="header-title text-center m-b-50">Abertura de <span>chamado</span></h1>
 		</header>
 
 		<section class="container-body">
 			<%= simple_form_for @order, url: new_order_path, html: { class: "form" } do |f| %>
 	      <%= f.simple_fields_for :stuff do |s| %>
 	      	<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
-	      	<%= params[:order] %>
 
 	      	<div class="flex-row gap-50 h-centered">
-	      		<%= content_tag :div, "", class: "flex-col flex-col-4" do %>
+	      		<%= content_tag :div, "", class: "flex-col flex-col-3" do %>
       				<%= f.input :order_school, label: "Nome da unidade", collection: @schools, prompt: "Selecione a sua unidade...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
     				<% end if is_admin? %>
 
-	      		<div class="flex-col flex-col-4">
-      				<%= f.input :requester, required: false, label: "Nome do(a) solicitante", label_html: { class: "form-label" }, input_html: { class: "text-center" } %>
+	      		<div class="flex-col flex-col-3">
+      				<%= f.input :requester, required: false, label: "Nome do(a) solicitante", label_html: { class: "form-label" } %>
 						</div>	      		
 	      	</div>
 	      		
